<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/edit_contact_address_root"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/white">


	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_vertical"
		android:layout_weight="1">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">

			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="fill_parent">

				<LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:background="@drawable/header_background">

					<ImageView android:src="@drawable/icon"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:layout_margin="5dip" />

					<TextView android:text="@string/locateme_options"
						android:layout_width="wrap_content" android:layout_height="fill_parent"
						android:layout_weight="1" style="@style/Text.BlackTitle1" />

				</LinearLayout>
			</LinearLayout>


			<Button android:id="@+id/maps_action" android:gravity="left|center_vertical"  android:text="@string/maps_action"
				android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:enabled="false" android:drawableRight="@drawable/ic_menu_myplaces"/>

			<Button android:id="@+id/contact_address_action"  android:gravity="left|center_vertical" android:text="@string/address_contact_action"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:enabled="false" android:drawableRight="@drawable/ic_menu_invite"/>


			<Button android:id="@+id/direction_action"  android:gravity="left|center_vertical" android:text="@string/direction_action"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:enabled="false" android:drawableRight="@drawable/ic_menu_goto" />


			<Button android:id="@+id/share_action"  android:gravity="left|center_vertical" android:text="@string/share_action"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:enabled="false" android:drawableRight="@drawable/ic_menu_send" />

		<Button android:id="@+id/save_location" android:gravity="left|center_vertical" android:text="Save my location"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:enabled="false" android:drawableRight="@drawable/ic_menu_save" />

			<Button android:id="@+id/refresh_action"  android:gravity="left|center_vertical" android:text="@string/refresh_action"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:enabled="true" android:drawableRight="@drawable/ic_menu_refresh"/>

	

		</LinearLayout>

	</ScrollView>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:background="@drawable/footer_background">

		<TextView android:id="@+id/address_action_choice" style="@style/Text.BlackSmall"
			android:text="@string/loading" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			 />

		<ImageView android:src="@android:drawable/divider_horizontal_bright"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp" />

		<TextView android:id="@+id/extra_info_action_choice" style="@style/Text.BlackSmall"
			android:text="@string/loading"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			 />

	</LinearLayout>


</LinearLayout>
